--- a/index.html
+++ b/index.html
@@ -6,8 +6,7 @@
     <title>Portfolio</title>
 </head>
 <body>
-    <h1>
-        My Portfolio
-    </h1>
+    <h3>Name: Shreyas Ganesh Sakate</h3>
+    <h2>Occupation: B.Tech</h2>
 </body>
 </html>
