--- a/index.html
+++ b/index.html
@@ -3,10 +3,69 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Portfolio</title>
+    <title>Web Developer Portfolio</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+            background-color: #f4f4f4;
+        }
+        header {
+            background-color: #35424a;
+            color: #ffffff;
+            padding: 10px 0;
+            text-align: center;
+        }
+        .container {
+            max-width: 960px;
+            margin: 20px auto;
+            padding: 20px;
+            background-color: #ffffff;
+            box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+        }
+        .project {
+            margin-bottom: 20px;
+            border-bottom: 1px solid #ccc;
+            padding-bottom: 10px;
+        }
+        .project h3 {
+            margin: 0;
+            color: #35424a;
+        }
+        .project p {
+            margin: 10px 0;
+        }
+        footer {
+            text-align: center;
+            padding: 10px;
+            background-color: #35424a;
+            color: #ffffff;
+        }
+    </style>
 </head>
 <body>
-    <h3>Name: Shreyas Ganesh Sakate</h3>
-    <h2>Occupation: B.Tech</h2>
+    <header>
+        <h1>John Doe</h1>
+        <p>Web Developer</p>
+    </header>
+    <div class="container">
+        <h2>Portfolio</h2>
+        <div class="project">
+            <h3>Project 1: Responsive Website</h3>
+            <p>A responsive website built using HTML, CSS, and JavaScript. Demonstrates mobile-first design and media queries.</p>
+        </div>
+        <div class="project">
+            <h3>Project 2: E-commerce Site</h3>
+            <p>An e-commerce website developed with HTML, CSS, and PHP. Integrated payment gateways and product catalog.</p>
+        </div>
+        <div class="project">
+            <h3>Project 3: Portfolio Website</h3>
+            <p>This very portfolio website you're looking at! Created with HTML and basic styling.</p>
+        </div>
+    </div>
+    <footer>
+        <p>&copy; 2023 John Doe</p>
+    </footer>
 </body>
 </html>
