--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
     <div class="container">
         <h2>Portfolio</h2>
         <div class="project">
-            <h3>Project 1: Responsive Website</h3>
+            <h3>Project 1: Responsive Webse</h3>
             <p>A responsive website built using HTML, CSS, and JavaScript. Demonstrates mobile-first design and media queries.</p>
         </div>
         <div class="project">
