--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-        <h1>Your Name</h1>
+        <h1>Shreyas Ganesh Sakate</h1>
         <nav>
             <ul>
                 <li><a href="#about">About Me</a></li>
@@ -61,7 +61,7 @@
         <p>Feel free to get in touch with me:</p>
         <ul>
             <li>Email: yourname@example.com</li>
-            <li>LinkedIn: <a href="https://www.linkedin.com/in/yourname/">linkedin.com/in/yourname</a></li>
+            <li>LinkedIn: <a href="https://www.linkedin.com/in/shreyas-sakate/">linkedin.com/in/yourname</a></li>
             <!-- Add more contact information as needed -->
         </ul>
     </section>
