--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
-    <title>Your Name - Full Stack Web Developer Portfolio</title>
+    <title>Shreyas Sakate - Full Stack Web Developer Portfolio</title>
 </head>
 <body>
     <header>
@@ -60,8 +60,8 @@
         <h2>Contact</h2>
         <p>Feel free to get in touch with me:</p>
         <ul>
-            <li>Email: yourname@example.com</li>
-            <li>LinkedIn: <a href="https://www.linkedin.com/in/shreyas-sakate/">linkedin.com/in/yourname</a></li>
+            <li>Email: shreyassakate@gmail.com</li>
+            <li>LinkedIn: <a href="https://www.linkedin.com/in/shreyas-sakate/">linkedin.com/in/shreyas-sakate</a></li>
             <!-- Add more contact information as needed -->
         </ul>
     </section>
